fix mobile h2 style in Apply block, fix main page content being too narrow on desktop

--- a/web/app/themes/ilsfa/assets/styles/pages/_programs.scss
+++ b/web/app/themes/ilsfa/assets/styles/pages/_programs.scss
@@ -25,6 +25,9 @@
         @include media-md {
           padding: grid(12) columns(2,14);
         }
+        > .user-content {
+          width: 100%;
+        }
       }
       .image-content {
         grid-area: image;
@@ -37,7 +40,7 @@
     background: $blurple;
     color: $white;
     >h2 {
-      @include h1;
+      @extend %h1;
       margin: grid(2) 0;
     }
     @include global-padding(12);
